# optiland

./: .gitignore  demo_grin_lens.py  pyproject.toml
docs/: GRIN_design_and_implementation.rst  GRIN_design_and_implementation_cn.rst
docs/GRIN_design/: Context Engineering Prompt.md  GRIN Design Context.md  GRIN_RK4_pseudocode.md  GRIN_design_and_implementation.rst  GRIN_design_and_implementation_cn.rst  GRIN_design_and_implementation_cn.txt  GRIN_design_reference_context.md  context_exp.md  todolist.md  todolist_cn.md
docs/api/: api_sources.rst
optiland/backend/: torch_backend.py
optiland/interactions/: gradient_propagation.py  gradient_propagation_old.py
optiland/materials/: __init__.py  gradient_material.py
optiland/optic/: optic.py
optiland/propagation/: base.py  gradient_propagation.py  grin.py  homogeneous.py
optiland/surfaces/: __init__.py  gradient_surface.py
tests/: test_gradient_material.py  test_gradient_propagation.py  test_gradient_surface.py  test_homogeneous.py  unit-tests-result.xml
tests/propagation/: test_grin.py  test_homogeneous.py
