[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optiland"
version = "0.6.0"
authors = [{ name = "Kramer Harrison", email = "kdanielharrison@gmail.com" }]
description = "Open Source Optical Design in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyyaml",
    "matplotlib",
    "vtk",
    "tabulate",
    "numba>=0.60.0",
    "requests",
    "seaborn",
    "typing-extensions>=4.1.0",
    "icontract",
]
license = { text = "MIT License" }

[project.urls]
Homepage = "https://github.com/optiland/optiland"
Repository = "https://github.com/optiland/optiland"
Documentation = "https://optiland.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/optiland/optiland/issues"

[project.scripts]
optiland = "optiland_gui.run_gui:main"

[tool.hatch.metadata]
allow-direct-references = true

# --- 修改开始 ---
[tool.hatch.build.targets.wheel]
packages = ["optiland", "optiland_gui"]
# 明确告知 hatchling，包位于项目的根目录，而不是 'src' 目录。
package-dir = ""
# --- 修改结束 ---

[tool.hatch.metadata.files]
"optiland/database" = ["*.csv", "*.yml", "**/*.yml", "*.npy"]

[tool.ruff]
line-length = 88
exclude = ["tests", "docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "PYI", # pyright
    "TC",  # type-checking
]
exclude = ["*.ipynb"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "codecov>=2.1.13",
    "torch",
    "pytest-cov>=7.0.0",
]
gui = ["PySide6", "qtconsole"]
torch = ["torch"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "-ra",
    "--junitxml=tests/unit-tests-result.xml",
]
